Fixed legibility on home page

--- a/themes/northendlab/assets/scss/_typography.scss
+++ b/themes/northendlab/assets/scss/_typography.scss
@@ -85,3 +85,11 @@ small,
 .text_small {
   font-size: 0.8rem;
 }
+
+h2.h4 {
+  font-weight: 700;
+}
+
+.section-title > h2.h4 {
+  color: $primary-color;
+}
